--- a/src/css/mini.css
+++ b/src/css/mini.css
@@ -105,8 +105,8 @@ main {
 }
 
 #immagine {
-    width: 50%;
-    height: 50%;
+    width: 80%;
+    height: auto;
     border-radius: 2em;
     display: block;
     margin: auto;
