--- a/src/css/mini.css
+++ b/src/css/mini.css
@@ -116,26 +116,13 @@ main {
     margin-right: 22.5%;
 }
 
-.aboutme {
+#aboutme {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 80%;
     height: auto;
-    margin: auto;
-    padding: 1em, 1em, 1em, 1em;
-    margin-left: 22.5%;
-    margin-right: 22.5%;
-}
-
-
-.aboutme dt {
-    font-weight: bold;
-    text-align: center;
-}
-
-.aboutme dd {
-    text-align: center;
+    padding: 1em;
 }
 
 .title {
@@ -161,7 +148,6 @@ main {
     margin: .5em;
     width: 100%;
     margin: auto;
-    /* border: 1px solid black; */
 }
 
 .experience {
@@ -194,6 +180,8 @@ main {
     height: auto;
     align-self: center;
     color: var(--textColor);
+    margin: auto;
+    margin-top: 1em;
 }
 
 #projects {
