--- a/src/css/mini.css
+++ b/src/css/mini.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 40pt;
-    line-height: 1em;
+    line-height: 1.3em;
 }
 
 main {
@@ -11,61 +11,15 @@ main {
     padding: 0.5em;
 }
 
-:root {
-    --primaryGradient_lightMode: #e3dbcc;
-    --secondaryGradient_lightMode: #faf6f1;
-    --tertiaryGradient_lightMode: #ead6ad;
-    --quadriaryGradient_lightMode: #efe0c1;
-    --senaryGradient_lightMode: #f9f4ea;
-    --textColor_lightMode: #030303;
-    --bg_lightMode: #F9F9F9;
-
-    --primaryGradient_darkMode: #FF4081;
-    --secondaryGradient_darkMode: #4d4d4d;
-    --tertiaryGradient_darkMode: #00E676;
-    --quadriaryGradient_darkMode: #343434;
-    --senaryGradient_darkMode: #FFFFFF;
-    --textColor_darkMode: #030303;
-    --bg_darkMode: #252525
-}
-
-[data-theme="darkMode"] {
-    --primaryGradient: var(--primaryGradient_darkMode);
-    --secondaryGradient: var(--secondaryGradient_darkMode);
-    --tertiaryGradient: var(--tertiaryGradient_darkMode);
-    --quadriaryGradient: var(--quadriaryGradient_darkMode);
-    --senaryGradient: var(--senaryGradient_darkMode);
-    --bg: var(--bg_darkMode);
-}
-
-[data-theme="lightMode"] {
-    --primaryGradient: var(--primaryGradient_lightMode);
-    --secondaryGradient: var(--secondaryGradient_lightMode);
-    --tertiaryGradient: var(--tertiaryGradient_lightMode);
-    --quadriaryGradient: var(--quadriaryGradient_lightMode);
-    --senaryGradient: var(--senaryGradient_lightMode);
-    --bg: var(--bg_lightMode);
-}
-
 /* Palette automatica */
 @media (prefers-color-scheme: dark) {
     :root {
-        /* --primaryGradient: #35bc66;
-        --secondaryGradient: #4d4d4d;
-        --tertiaryGradient: #00E676;
-        --quadriaryGradient: #343434;
-        --senaryGradient: #f9f4ea;
+        --primaryGradient: #9e9e9e;
+        --secondaryGradient: #454545;
+        --senaryGradient: #797979;
         --textColor: #FFFFFF;
-        --titleColor: #030303;
-        --bg: #252525 */
-
-        --primaryGradient: #e3dbcc;
-        --secondaryGradient: #faf6f1;
-        --tertiaryGradient: #ead6ad;
-        --quadriaryGradient: #efe0c1;
-        --senaryGradient: #f9f4ea;
-        --textColor: black;
-        --bg: #F9F9F9;
+        --titleColor: black;
+        --bg: #1e1e1e;
     }
 }
 
@@ -73,12 +27,10 @@ main {
     :root {
         --primaryGradient: #e3dbcc;
         --secondaryGradient: #faf6f1;
-        --tertiaryGradient: #ead6ad;
-        --quadriaryGradient: #efe0c1;
         --senaryGradient: #f9f4ea;
         --textColor: black;
+        --titleColor: black;
         --bg: #F9F9F9;
-
     }
 }
 
@@ -127,7 +79,7 @@ main {
 #aboutme {
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    text-align: left;
     width: 80%;
     height: auto;
     padding: 1em;
@@ -223,7 +175,7 @@ main {
 
 .projects-col img {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: auto;
     border-radius: 1em;
 }
