--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,55 +12,30 @@
     padding: 0;
     font-family: "Prompt", sans-serif;
     font-size: 20pt;
-}
-
-/* Palette chiara */
-:root {
-    --primaryGradient_lightMode: #e3dbcc;
-    --secondaryGradient_lightMode: #faf6f1;
-    --tertiaryGradient_lightMode: #ead6ad;
-    --quadriaryGradient_lightMode: #efe0c1;
-    --senaryGradient_lightMode: #f9f4ea;
-    --textColor_lightMode: #030303;
-    --bg_lightMode: #F9F9F9;
-
-    --primaryGradient_darkMode: #FF4081;
-    --secondaryGradient_darkMode: #4d4d4d;
-    --tertiaryGradient_darkMode: #00E676;
-    --quadriaryGradient_darkMode: #343434;
-    --senaryGradient_darkMode: #f9f4ea;
-    --textColor_darkMode: #FFFFFF;
-    --bg_darkMode: #252525
-}
-
-[data-theme="darkMode"] {
-    --primaryGradient: var(--primaryGradient_darkMode);
-    --secondaryGradient: var(--secondaryGradient_darkMode);
-    --tertiaryGradient: var(--tertiaryGradient_darkMode);
-    --quadriaryGradient: var(--quadriaryGradient_darkMode);
-    --senaryGradient: var(--senaryGradient_darkMode);
-    --bg: var(--bg_darkMode);
-}
-
-[data-theme="lightMode"] {
-    --primaryGradient: var(--primaryGradient_lightMode);
-    --secondaryGradient: var(--secondaryGradient_lightMode);
-    --tertiaryGradient: var(--tertiaryGradient_lightMode);
-    --quadriaryGradient: var(--quadriaryGradient_lightMode);
-    --senaryGradient: var(--senaryGradient_lightMode);
-    --bg: var(--bg_lightMode);
+    line-height: 1.5em;
 }
 
 /* Palette automatica */
 @media (prefers-color-scheme: dark) {
     :root {
-        --primaryGradient: #FF4081;
-        --secondaryGradient: #4d4d4d;
-        --tertiaryGradient: #00E676;
-        --quadriaryGradient: #343434;
-        --senaryGradient: #f9f4ea;
+        --primaryGradient: #9e9e9e;
+        --secondaryGradient: #454545;
+        --senaryGradient: #797979;
         --textColor: #FFFFFF;
-        --bg: #252525
+        --titleColor: black;
+        --bg: #1e1e1e;
+    }
+}
+
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --primaryGradient: #e3dbcc;
+        --secondaryGradient: #faf6f1;
+        --senaryGradient: #f9f4ea;
+        --textColor: black;
+        --titleColor: black;
+        --bg: #F9F9F9;
     }
 }
 
@@ -213,6 +188,13 @@ main {
     bottom: 2em;
     width: 1px;
     background-color: black;
+}
+
+ul {}
+
+li {
+    list-style-type: none;
+    text-align: left;
 }
 
 #tecno,
